--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,3 +17,17 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{pub.1126580101,
+ abstract = {M dwarfs are the most common type of star in the Galaxy, and because of their small size are favored targets for searches of Earth-sized transiting exoplanets. Current and upcoming all-sky spectroscopic surveys, such as the Large Sky Area Multi Fiber Spectroscopic Telescope (LAMOST), offer an opportunity to systematically determine physical properties of many more M dwarfs than has been previously possible. Here, we present new effective temperatures, radii, masses, and luminosities for 29,678 M dwarfs with spectral types M0–M6 in the first data release (DR1) of LAMOST. We derived these parameters from the supervised machine-learning code, The Cannon, trained with 1388 M dwarfs in the Transiting Exoplanet Survey Satellite Cool Dwarf Catalog that were also present in LAMOST with high signal-to-noise ratio (>250) spectra. Our validation tests show that the output parameter uncertainties are strongly correlated with the signal-to-noise of the LAMOST spectra, and we achieve typical uncertainties of 110 K in (∼3%), 0.065 (∼14%) in radius, 0.054 (∼12%) in mass, and 0.012 (∼20%) in luminosity. The model presented here can be rapidly applied to future LAMOST data releases, significantly extending the samples of well-characterized M dwarfs across the sky using new and exclusively data-based modeling methods.},
+ author = {Galgano, Brianna and Stassun, Keivan and Rojas-Ayala, Bárbara},
+ doi = {10.3847/1538-3881/ab7f37},
+ journal = {The Astronomical Journal},
+ keywords = {},
+ note = {http://arxiv.org/pdf/1912.06648},
+ number = {5},
+ pages = {193},
+ title = {Fundamental Parameters of ∼30,000 M dwarfs in LAMOST DR1 Using Data-driven Spectral Modeling},
+ url = {https://app.dimensions.ai/details/publication/pub.1126580101},
+ volume = {159},
+ year = {2020}
+}
