--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,51 @@
-@article{pub.1126580101,
- abstract = {M dwarfs are the most common type of star in the Galaxy, and because of their small size are favored targets for searches of Earth-sized transiting exoplanets. Current and upcoming all-sky spectroscopic surveys, such as the Large Sky Area Multi Fiber Spectroscopic Telescope (LAMOST), offer an opportunity to systematically determine physical properties of many more M dwarfs than has been previously possible. Here, we present new effective temperatures, radii, masses, and luminosities for 29,678 M dwarfs with spectral types M0–M6 in the first data release (DR1) of LAMOST. We derived these parameters from the supervised machine-learning code, The Cannon, trained with 1388 M dwarfs in the Transiting Exoplanet Survey Satellite Cool Dwarf Catalog that were also present in LAMOST with high signal-to-noise ratio (>250) spectra. Our validation tests show that the output parameter uncertainties are strongly correlated with the signal-to-noise of the LAMOST spectra, and we achieve typical uncertainties of 110 K in (∼3%), 0.065 (∼14%) in radius, 0.054 (∼12%) in mass, and 0.012 (∼20%) in luminosity. The model presented here can be rapidly applied to future LAMOST data releases, significantly extending the samples of well-characterized M dwarfs across the sky using new and exclusively data-based modeling methods.},
- author = {Galgano, Brianna and Stassun, Keivan and Rojas-Ayala, Bárbara},
- doi = {10.3847/1538-3881/ab7f37},
- journal = {The Astronomical Journal},
- keywords = {},
- note = {http://arxiv.org/pdf/1912.06648},
- number = {5},
- pages = {193},
- title = {Fundamental Parameters of ∼30,000 M dwarfs in LAMOST DR1 Using Data-driven Spectral Modeling},
- url = {https://app.dimensions.ai/details/publication/pub.1126580101},
- volume = {159},
- year = {2020}
+@ARTICLE{2020AJ....160..116G,
+       author = {{Gilbert}, Emily A. and {Barclay}, Thomas and {Schlieder}, Joshua E. and {Quintana}, Elisa V. and {Hord}, Benjamin J. and {Kostov}, Veselin B. and {Lopez}, Eric D. and {Rowe}, Jason F. and {Hoffman}, Kelsey and {Walkowicz}, Lucianne M. and {Silverstein}, Michele L. and {Rodriguez}, Joseph E. and {Vanderburg}, Andrew and {Suissa}, Gabrielle and {Airapetian}, Vladimir S. and {Clement}, Matthew S. and {Raymond}, Sean N. and {Mann}, Andrew W. and {Kruse}, Ethan and {Lissauer}, Jack J. and {Col{\'o}n}, Knicole D. and {Kopparapu}, Ravi kumar and {Kreidberg}, Laura and {Zieba}, Sebastian and {Collins}, Karen A. and {Quinn}, Samuel N. and {Howell}, Steve B. and {Ziegler}, Carl and {Vrijmoet}, Eliot Halley and {Adams}, Fred C. and {Arney}, Giada N. and {Boyd}, Patricia T. and {Brande}, Jonathan and {Burke}, Christopher J. and {Cacciapuoti}, Luca and {Chance}, Quadry and {Christiansen}, Jessie L. and {Covone}, Giovanni and {Daylan}, Tansu and {Dineen}, Danielle and {Dressing}, Courtney D. and {Essack}, Zahra and {Fauchez}, Thomas J. and {Galgano}, Brianna and {Howe}, Alex R. and {Kaltenegger}, Lisa and {Kane}, Stephen R. and {Lam}, Christopher and {Lee}, Eve J. and {Lewis}, Nikole K. and {Logsdon}, Sarah E. and {Mandell}, Avi M. and {Monsue}, Teresa and {Mullally}, Fergal and {Mullally}, Susan E. and {Paudel}, Rishi R. and {Pidhorodetska}, Daria and {Plavchan}, Peter and {Reyes}, Naylynn Ta{\~n}{\'o}n and {Rinehart}, Stephen A. and {Rojas-Ayala}, B{\'a}rbara and {Smith}, Jeffrey C. and {Stassun}, Keivan G. and {Tenenbaum}, Peter and {Vega}, Laura D. and {Villanueva}, Geronimo L. and {Wolf}, Eric T. and {Youngblood}, Allison and {Ricker}, George R. and {Vanderspek}, Roland K. and {Latham}, David W. and {Seager}, Sara and {Winn}, Joshua N. and {Jenkins}, Jon M. and {Bakos}, G{\'a}sp{\'a}r {\r{A}}. and {Brice{\~n}o}, C{\'e}sar and {Ciardi}, David R. and {Cloutier}, Ryan and {Conti}, Dennis M. and {Couperus}, Andrew and {Di Sora}, Mario and {Eisner}, Nora L. and {Everett}, Mark E. and {Gan}, Tianjun and {Hartman}, Joel D. and {Henry}, Todd and {Isopi}, Giovanni and {Jao}, Wei-Chun and {Jensen}, Eric L.~N. and {Law}, Nicholas and {Mallia}, Franco and {Matson}, Rachel A. and {Shappee}, Benjamin J. and {Le Wood}, Mackennae and {Winters}, Jennifer G.},
+        title = "{The First Habitable-zone Earth-sized Planet from TESS. I. Validation of the TOI-700 System}",
+      journal = {\aj},
+     keywords = {Exoplanet systems, Transit photometry, Low mass stars, M dwarf stars, Astronomy data analysis, 484, 1709, 2050, 982, 1858, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = sep,
+       volume = {160},
+       number = {3},
+          eid = {116},
+        pages = {116},
+          doi = {10.3847/1538-3881/aba4b2},
+archivePrefix = {arXiv},
+       eprint = {2001.00952},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020AJ....160..116G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2020AJ....159..193G,
+       author = {{Galgano}, Brianna and {Stassun}, Keivan and {Rojas-Ayala}, B{\'a}rbara},
+        title = "{Fundamental Parameters of {\ensuremath{\sim}}30,000 M dwarfs in LAMOST DR1 Using Data-driven Spectral Modeling}",
+      journal = {\aj},
+     keywords = {Stellar properties, Low mass stars, Astronomy data modeling, 1624, 2050, 1859, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = may,
+       volume = {159},
+       number = {5},
+          eid = {193},
+        pages = {193},
+          doi = {10.3847/1538-3881/ab7f37},
+archivePrefix = {arXiv},
+       eprint = {1912.06648},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020AJ....159..193G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2020yCat..51590193G,
+       author = {{Galgano}, B. and {Stassun}, K. and {Rojas-Ayala}, B.},
+        title = "{VizieR Online Data Catalog: Stellar parameters of \raisebox{-0.5ex}\textasciitilde30000 LAMOST DR1 M dwarfs (Galgano+, 2020)}",
+      journal = {VizieR Online Data Catalog},
+     keywords = {Stars: dwarfs, Stars: M-type, Stars: diameters, Stars: masses, Spectral types, Spectra: optical, Effective temperatures},
+         year = 2020,
+        month = may,
+          eid = {J/AJ/159/193},
+        pages = {J/AJ/159/193},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020yCat..51590193G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
